@@ -33,6 +33,18 @@ pre code {
 padding: 5px;
 }
 
+header h1 {
+margin: 25px 0 0 0;
+padding: 0;
+}
+
+header p {
+text-align: center;
+margin: 0 0 25px 0;
+padding: 0;
+font-size: 70%;
+}
+
 nav {
 display: block;
 width: 80%;
@@ -192,3 +204,4 @@ border-top: 1px solid #999;
 text-align: center;
 font-size: 70%;
 }
+
